--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "npm": ">=6"
   },
   "dependencies": {
+    "16": "0.0.2",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
+    "axios": "1.7.9",
     "chalk": "4.1.0",
     "history": "5.0.0",
     "js-cookie": "3.0.0",
-    "msw": "0.33.0",
+    "msw": "2.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
@@ -21,14 +23,21 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "babel-preset-react-app": "10.0.1",
+    "eslint": "8.57.1",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
+    "eslint-config-react-app": "7.0.1",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "5.0.1",
+    "webpack": "5.97.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
